--- a/.github/workflows/migration.yaml
+++ b/.github/workflows/migration.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: $REGISTRY
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -31,4 +31,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: $REGISTRY/${{ github.repository }}:latest
+          tags: ${{ env.REGISTRY }}/${{ github.repository }}:latest
